testdata/baselines/reference/submodule/conformance/jsxJsxsCjsTransformNestedSelfClosingChild(jsx=react-jsx).errors.txt
jsxJsxsCjsTransformNestedSelfClosingChild.tsx(2,29): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== jsxJsxsCjsTransformNestedSelfClosingChild.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import type * as React from 'react';
                                ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    console.log(
      <div>
        <div />
      </div>
    )
    
    console.log(
      <div>
        <div />
        <div />
      </div>
    )
    
    console.log(
      <div>
        {[1, 2].map(i => <div key={i}>{i}</div>)}
      </div>
    )